--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
     "name": "jiq",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "description": "Use existing javascript knowledge to query or mutate data",
-    "keywords": ["javascript inline query", "json query", "json inline query", "json", "yaml", "query"],
+    "keywords": [
+        "javascript inline query",
+        "json query",
+        "json inline query",
+        "json",
+        "yaml",
+        "query"
+    ],
     "main": "build/index.js",
     "author": {
         "name": "Adil",
