adding printer formta

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     },
     "homepage": "https://md-adil.github.io/jiq/",
     "repository": {
-        "url": "https://md-adil.github.io/jiq/",
+        "url": "https://github.com/md-adil/jiq",
         "type": "git"
     },
     "license": "MIT",
