adding html, xml support

--- a/package.json
+++ b/package.json
@@ -28,12 +28,16 @@
         "start": "node ./build"
     },
     "devDependencies": {
+        "@types/cheerio": "^0.22.22",
         "@types/lodash": "^4.14.165",
         "@types/node": "^14.14.6"
     },
     "dependencies": {
+        "cheerio": "^1.0.0-rc.3",
         "commander": "^6.2.0",
         "csv-parse": "^4.14.0",
+        "csv-stringify": "^5.5.1",
+        "fast-xml-parser": "^3.17.4",
         "lodash": "^4.17.20",
         "yaml": "^1.10.0"
     },
