--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "yaml",
         "query"
     ],
-    "main": "build/index.js",
+    "main": "build/src/index.js",
     "author": {
         "name": "Adil",
         "email": "adil.sudo@gmail.com",
@@ -25,15 +25,20 @@
     "scripts": {
         "watch": "tsc -w",
         "build": "rm -r build && tsc",
-        "start": "node ./build"
+        "start": "node ./build",
+        "test": "mocha ./build/tests/*.spec.js"
     },
     "devDependencies": {
+        "@types/chai": "^4.2.14",
         "@types/cheerio": "^0.22.22",
         "@types/lodash": "^4.14.165",
         "@types/mime-types": "^2.1.0",
+        "@types/mocha": "^8.0.4",
         "@types/node": "^14.14.6",
         "@types/node-fetch": "^2.5.7",
-        "@types/table": "^6.0.0"
+        "@types/table": "^6.0.0",
+        "chai": "^4.2.0",
+        "mocha": "^8.2.1"
     },
     "dependencies": {
         "chalk": "^4.1.0",
@@ -49,5 +54,5 @@
         "table": "^6.0.3",
         "yaml": "^1.10.0"
     },
-    "bin": "./build/index.js"
+    "bin": "./build/src/index.js"
 }
