--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "license": "MIT",
     "scripts": {
         "watch": "tsc -w",
-        "build": "rm -r build && tsc",
+        "prebuild": "rm -rf ./dist",
+        "build": "rollup -c",
         "start": "node ./build",
         "test": "mocha ./build/tests/*.spec.js"
     },
     "devDependencies": {
+        "@rollup/plugin-typescript": "^8.2.5",
         "@types/chai": "^4.2.14",
         "@types/cheerio": "^0.22.22",
         "@types/lodash": "^4.14.165",
@@ -38,8 +40,13 @@
         "@types/node": "^14.14.6",
         "@types/node-fetch": "^2.5.7",
         "@types/table": "^6.0.0",
+        "builtin-modules": "^3.2.0",
         "chai": "^4.2.0",
-        "mocha": "^8.2.1"
+        "mocha": "^8.2.1",
+        "rollup": "^2.56.3",
+        "rollup-plugin-node-externals": "^2.2.0",
+        "tslib": "^2.3.1",
+        "typescript": "^4.4.3"
     },
     "dependencies": {
         "chalk": "^4.1.0",
